Fixed link contrast

--- a/css/portal.css
+++ b/css/portal.css
@@ -47,7 +47,11 @@ h2 {
 }
 
 a:visited {
-    color: var(--accent1-color);
+    color: var(--primary-color);
+}
+
+footer a:visited {
+    color: white;
 }
 
 footer {
